fix component names

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./stories/awesome-rating/awesome-rating.js"></script>
+    <script src="./stories/m2-rating/m2-rating.js"></script>
+    <script src="./stories/m2-avatar/m2-avatar.js"></script>
 </head>
 <body>
     <div>
-        <awesome-rating min="0" max="5" value="3" color="#ff00ff" size="2"></awesome-rating>
+        <m2-rating min="0" max="5" value="3" color="#ff00ff" size="2"></m2-rating>
     </div>
     <div>
-        <awesome-rating min="0" max="6" value="3" color="red" size="2"></awesome-rating>
+        <m2-rating min="0" max="6" value="3" color="red" size="2"></m2-rating>
     </div>
     <div>
-        <awesome-rating min="0" max="8" value="3" color="green" size="2"></awesome-rating>
+        <m2-rating min="0" max="8" value="3" color="green" size="2"></m2-rating>
+    </div>
+    <div>
+        <m2-avatar></m2-avatar>
     </div>
     <script>
         document.addEventListener('onRatingclick', (e) => e.target.setAttribute('value', e.detail.ratingNumber))
