--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./stories/m2-rating/m2-rating.js"></script>
     <script src="./stories/m2-avatar/m2-avatar.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <m2-rating min="0" max="5" value="3" color="#ff00ff" size="2"></m2-rating>
+      <m2-rating min="0" max="5" value="3" color="#ff00ff" size="2"></m2-rating>
     </div>
     <div>
-        <m2-rating min="0" max="6" value="3" color="red" size="2"></m2-rating>
+      <m2-rating min="0" max="6" value="3" color="red" size="2"></m2-rating>
     </div>
     <div>
-        <m2-rating min="0" max="8" value="3" color="green" size="2"></m2-rating>
+      <m2-rating min="0" max="8" value="3" color="green" size="2"></m2-rating>
     </div>
     <div>
-        <m2-avatar></m2-avatar>
+      <m2-avatar></m2-avatar>
     </div>
     <script>
-        document.addEventListener('onRatingclick', (e) => e.target.setAttribute('value', e.detail.ratingNumber))
+      document.addEventListener('onRatingclick', (e) =>
+        e.target.setAttribute('value', e.detail.ratingNumber)
+      );
     </script>
-</body>
+  </body>
 </html>
